add js modules && refactor menu

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <ul>
               <li>
                 <span>Product <i class="fas fa-chevron-down"></i></span>
-                <ul>
+
+                <ul class="nav-list">
                   <li>Overview</li>
                   <li>Pricing</li>
                   <li>Marketplace</li>
@@ -50,7 +51,8 @@
               </li>
               <li>
                 <span>Company <i class="fas fa-chevron-down"></i></span>
-                <ul>
+
+                <ul class="nav-list">
                   <li>About</li>
                   <li>Team</li>
                   <li>Blog</li>
@@ -59,7 +61,7 @@
               </li>
               <li>
                 <span>Connect <i class="fas fa-chevron-down"></i></span>
-                <ul>
+                <ul class="nav-list">
                   <li>Contact</li>
                   <li>Newsletter</li>
                   <li>LinkedIn</li>
@@ -200,6 +202,6 @@
       >. Coded by <a href="#">Leonardo Burtet</a>.
     </div>
 
-    <script src="/script/script.js"></script>
+    <script type="module" src="/script/script.js"></script>
   </body>
 </html>
