refactor css header

--- a/index.html
+++ b/index.html
@@ -29,46 +29,51 @@
     <header>
       <nav>
         <div class="box">
-          <span class="box__logo"><img src="./images/logo.svg" alt="" /></span>
-
-          <button class="box__button">
-            <img class="icon-open" src="./images/icon-hamburger.svg" alt="" />
-            <img src="./images/icon-close.svg" alt="" />
+          <span class="box__logo"
+            ><img src="./images/logo.svg" alt="logo blogr"
+          /></span>
+          <button class="box__btn">
+            <img
+              class="icon-open"
+              src="./images/icon-hamburger.svg"
+              alt="icon open"
+            />
+            <img src="./images/icon-close.svg" alt="icon close" />
           </button>
 
           <div class="box__menu">
-            <ul>
+            <ul class="box__menu__list">
               <li>
                 <span>Product <i class="fas fa-chevron-down"></i></span>
 
-                <ul class="nav-list">
-                  <li>Overview</li>
-                  <li>Pricing</li>
-                  <li>Marketplace</li>
-                  <li>Features</li>
-                  <li>Integrations</li>
+                <ul class="box__menu__links">
+                  <li><a href="#">Overview</a></li>
+                  <li><a href="#">Pricing</a></li>
+                  <li><a href="#">Marketplace</a></li>
+                  <li><a href="#">Features</a></li>
+                  <li><a href="#">Integrations</a></li>
                 </ul>
               </li>
               <li>
                 <span>Company <i class="fas fa-chevron-down"></i></span>
 
-                <ul class="nav-list">
-                  <li>About</li>
-                  <li>Team</li>
-                  <li>Blog</li>
-                  <li>Careers</li>
+                <ul class="box__menu__links">
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Team</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">Careers</a></li>
                 </ul>
               </li>
               <li>
                 <span>Connect <i class="fas fa-chevron-down"></i></span>
-                <ul class="nav-list">
-                  <li>Contact</li>
-                  <li>Newsletter</li>
-                  <li>LinkedIn</li>
+                <ul class="box__menu__links">
+                  <li><a href="#">Contact</a></li>
+                  <li><a href="#">Newsletter</a></li>
+                  <li><a href="#">LinkedIn</a></li>
                 </ul>
               </li>
             </ul>
-            <div class="menu__login">
+            <div class="box__menu__login">
               <button>Login</button>
               <button>Sign Up</button>
             </div>
