refactor css section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         src="./images/illustration-editor-desktop.svg"
         alt=""
       />
-      <div class="">
+      <div>
         <h3>Introducing an extensible editor</h3>
         <p>
           Blogr features an exceedingly intuitive interface which lets you focus
@@ -125,7 +125,7 @@
       <div class="section-mid__img">
         <img src="./images/illustration-phones.svg" alt="" />
       </div>
-      <div class="">
+      <div>
         <h3>State of the Art Infrastructure</h3>
         <p>
           With reliability and speed in mind, worldwide data centers provide the
@@ -136,7 +136,7 @@
       </div>
     </section>
 
-    <section class="section-bottom">
+    <section class="section-bot">
       <img
         class="mobile"
         src="./images/illustration-laptop-mobile.svg"
@@ -148,7 +148,7 @@
         alt=""
       />
 
-      <div class="">
+      <div>
         <h3>Free, open, simple</h3>
         <p>
           Blogr is a free and open source application backed by a large
@@ -168,7 +168,7 @@
     </section>
 
     <footer>
-      <div class="">
+      <div>
         <div class="logo"><img src="./images/logo.svg" alt="" /></div>
         <div class="product">
           <span>Product</span>
