--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="box__menu">
             <ul class="box__menu__list">
               <li>
-                <span>Product <i class="fas fa-chevron-down"></i></span>
+                <span><a>Product</a> <i class="fas fa-chevron-down"></i></span>
 
                 <ul class="box__menu__links">
                   <li><a href="#">Overview</a></li>
@@ -55,7 +55,7 @@
                 </ul>
               </li>
               <li>
-                <span>Company <i class="fas fa-chevron-down"></i></span>
+                <span><a>Company</a> <i class="fas fa-chevron-down"></i></span>
 
                 <ul class="box__menu__links">
                   <li><a href="#">About</a></li>
@@ -65,7 +65,7 @@
                 </ul>
               </li>
               <li>
-                <span>Connect <i class="fas fa-chevron-down"></i></span>
+                <span><a>Connect</a> <i class="fas fa-chevron-down"></i></span>
                 <ul class="box__menu__links">
                   <li><a href="#">Contact</a></li>
                   <li><a href="#">Newsletter</a></li>
@@ -173,28 +173,28 @@
         <div class="product">
           <span>Product</span>
           <ul>
-            <li>Overview</li>
-            <li>Pricing</li>
-            <li>Marketplace</li>
-            <li>Features</li>
-            <li>Integrations</li>
+            <li><a>Overview</a></li>
+            <li><a>Pricing</a></li>
+            <li><a>Marketplace</a></li>
+            <li><a>Features</a></li>
+            <li><a>Integrations</a></li>
           </ul>
         </div>
         <div class="company">
           <span>Company</span>
           <ul>
-            <li>About</li>
-            <li>Team</li>
-            <li>Blog</li>
-            <li>Carrers</li>
+            <li><a>About</a></li>
+            <li><a>Team</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Carrers</a></li>
           </ul>
         </div>
         <div class="connect">
           <span>Connect</span>
           <ul>
-            <li>Contact</li>
-            <li>Newsletter</li>
-            <li>Linkedin</li>
+            <li><a>Contact</a></li>
+            <li><a>Newsletter</a></li>
+            <li><a>Linkedin</a></li>
           </ul>
         </div>
       </div>
